testsuite/tests/grammar/invalid_token_rule/test.out
== bad-token-casing.lkt ==
bad-token-casing.lkt:5:38: error: Unknown token: Example
5 |     @main_rule main_rule <- Example(@Example)
  |                                      ^^^^^^^


== unknown-token.lkt ==
unknown-token.lkt:5:38: error: Cannot find entity `no_such_token` in this scope
5 |     @main_rule main_rule <- Example(@no_such_token)
  |                                      ^^^^^^^^^^^^^


Done
